# delaynomore

./: .env.example  .gitignore  CLAUDE.md  Package.swift  README.md  README.zh.md  appcast.xml  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
.gstack/: browse.json
App/: Info.plist
Sources/DelayNoMoreApp/: AppDelegate.swift  Localized.swift  MediaImportCoordinator.swift  PixelSceneView.swift  ReminderMediaLibrary.swift  ReminderWindowController.swift  SceneAnimations.swift  SceneTemplate.swift  SettingsView.swift  SettingsWindowController.swift
Sources/DelayNoMoreApp/Resources/: AppIcon.icns
Sources/DelayNoMoreApp/Resources/BuiltInReminders/: README.md
Sources/DelayNoMoreApp/Resources/en.lproj/: Localizable.strings
Sources/DelayNoMoreApp/Resources/zh-Hans.lproj/: Localizable.strings
Sources/DelayNoMoreAppResources/: Bundle.swift
Sources/DelayNoMoreCore/: AppConfig.swift  ConfigStore.swift  CustomMediaStore.swift  MenuPresentation.swift  TimerModel.swift
Tests/DelayNoMoreTests/: AppResourcesTests.swift  ConfigStoreTests.swift  CustomMediaStoreTests.swift  MenuPresentationTests.swift  TimerModelTests.swift
scripts/: build-app.sh  check.sh  dev.sh  test-app-bundle.sh  update-appcast.py
src/: bubble.js  main.js  onboarding.js  pet.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  idle.rs  lib.rs  llm.rs  main.rs  state_machine.rs  stats.rs  timer.rs  tray.rs
(+2 files in other folders)
